--- a/contact.html
+++ b/contact.html
@@ -68,10 +68,18 @@
           <h1>Get in touch</h1>
           <img src="assets/images/emerald_bay.jpg" alt="Beautiful Lake Tahoe" class="articleImage" />
           <div class="multiCol">
-            <p>If youare on this page, weare guessing you've got something to say! Drop us a line, and be sure to sign up for our newsletter. If youare looking for our seasonal tours,  let us know when youare thinking of taking a trip. Not only will we get back to you with our website exclusive tours (we don't publish these for everyone!), but we'll be sure to throw in some cool discounts and tour extras as well.</p>
+            <p>If you are on this page, weare guessing you have got something to say! Drop us a line, 
+              and be sure to sign up for our newsletter. If you are looking for our seasonal tours,  
+              let us know when you are thinking of taking a trip. Not only will we get back to you with our website 
+              exclusive tours (we do not publish these for everyone!), but we will be sure to throw in some cool discounts and 
+              tour extras as well.</p>
    
             <h2>Support options</h2>
-            <p>If youare currently on a tour and need support, please visit our <a href="support.html">support</a> page. If none of these options are right for you and you still need to get in touch with us, feel free to call us at<span class="phone"> <strong>866.555.4310</strong>. Please note that this is not the support line, for support you could call </span><strong>866.555.4315</strong>. Thanks for getting in touch!</p>
+            <p>If you are currently on a tour and need support, please visit our <a href="support.html">support</a> page. 
+              If none of these options are right for you and you still need to get in touch with us, 
+              feel free to call us at<span class="phone"> <strong>866.555.4310</strong>. 
+                Please note that this is not the support line, for support you could call </span><strong>866.555.4315</strong>. 
+                Thanks for getting in touch!</p>
           </div>
    
           <form id="frmContact" name="frmContact" method="post" action="contact_process.html">
